<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:layout_margin="0dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/leave_a_star"/>

    <RatingBar
        android:id="@+id/create_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:theme="@style/RatingBar"
        android:rating="5.0"
        />

    <TextView
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_your_review"
        android:textSize="20sp"/>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/create_review"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border2"
        android:gravity="start"
        android:allowUndo="true"
        android:minLines="4"
        android:inputType="textMultiLine"
        android:autofillHints="say something" />

    <Button
        android:id="@+id/review_button"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter"/>

</LinearLayout>